samples/_failures_safe/1761194407_cd957c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28ae7fcc.c: In function ‘parser_init’:
./samples/SAFE/__tmp_28ae7fcc.c:150:29: error: ‘lexer_next’ undeclared (first use in this function); did you mean ‘lexer_peek’?
  150 |     parser->current_token = lexer_next
      |                             ^~~~~~~~~~
      |                             lexer_peek
./samples/SAFE/__tmp_28ae7fcc.c:150:29: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_28ae7fcc.c:150:39: error: expected ‘;’ at end of input
  150 |     parser->current_token = lexer_next
      |                                       ^
      |                                       ;
./samples/SAFE/__tmp_28ae7fcc.c:150:5: error: expected declaration or statement at end of input
  150 |     parser->current_token = lexer_next
      |     ^~~~~~
